--- a/app/Rance Connect/MainWindow.xaml
+++ b/app/Rance Connect/MainWindow.xaml
@@ -9,7 +9,25 @@
         ">
     <Grid Background="#232628">
         <Menu Background="#FF2E333A" HorizontalAlignment="Left" Width="140">
-            <Button Content="Dashboard" Click="Dashboard_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Height="50" Width="140" Margin="-7,10,0,10" Background="#2E333A" BorderBrush="#2E333A" Foreground="White"/>
+            <MenuItem  Header="Dashboard" Click="Dashboard_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Height="50" Width="140" Margin="0,10,0,10" BorderBrush="{x:Null}" Foreground="#FFFFFF">
+                <MenuItem.Template>
+                    <ControlTemplate TargetType="{x:Type MenuItem}">
+                        <Border x:Name="Border" Background="{TemplateBinding Background}">
+                            <ContentPresenter Content="{TemplateBinding Header}"
+                        ContentTemplate="{TemplateBinding HeaderTemplate}"
+                        Margin="{TemplateBinding Padding}"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        RecognizesAccessKey="True" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsHighlighted" Value="True">
+                                <Setter TargetName="Border" Property="Background" Value="Yellow" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </MenuItem.Template>
+            </MenuItem>
             <Button Content="Stocks" Click="Stocks_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Height="50" Width="140" Margin="-7,10,0,10" Background="#2E333A" BorderBrush="#2E333A" Foreground="White"/>
             <Button Content="Alertes" Click="Alertes_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Height="50" Width="140" Margin="-7,10,0,10" Background="#2E333A" BorderBrush="#2E333A" Foreground="White"/>
             <Button Content="Historiques Actions" Click="Historique_Click" HorizontalAlignment="Left" VerticalAlignment="Top" Height="50" Width="140" Background="#2E333A" BorderBrush="#2E333A" Foreground="White" Margin="-7,0,0,0"/>
