--- a/app/Rance Connect/MainWindow.xaml
+++ b/app/Rance Connect/MainWindow.xaml
@@ -1,15 +1,15 @@
-﻿<Window x:Class="Rance_Connect.MainWindow"
+﻿<Window x:Class="Rance_App.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Rance_Connect"
+        xmlns:local="clr-namespace:Rance_App"
         mc:Ignorable="d"
-        Title="MainWindow" Height="700" Width="940
-        ">
+        Title="MainWindow" MinHeight="500" MinWidth="900" Height="700" Width="940">
+    
     <Grid Background="#232628">
         <Menu Background="#FF2E333A" HorizontalAlignment="Left" Width="140">
-            <MenuItem  Header="Dashboard" Click="Dashboard_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Height="50" Width="140" Margin="0,10,0,10" BorderBrush="{x:Null}" Foreground="#FFFFFF">
+            <MenuItem  Header="Dashboard" Click="Dashboard_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Height="80" Width="140" Margin="0,10,0,5" BorderBrush="{x:Null}" Foreground="#FFFFFF">
                 <MenuItem.Template>
                     <ControlTemplate TargetType="{x:Type MenuItem}">
                         <Border x:Name="Border" Background="{TemplateBinding Background}">
@@ -22,15 +22,72 @@
                         </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsHighlighted" Value="True">
-                                <Setter TargetName="Border" Property="Background" Value="Yellow" />
+                                <Setter TargetName="Border" Property="Background" Value="#FF282D33" />
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
                 </MenuItem.Template>
             </MenuItem>
-            <Button Content="Stocks" Click="Stocks_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Height="50" Width="140" Margin="-7,10,0,10" Background="#2E333A" BorderBrush="#2E333A" Foreground="White"/>
-            <Button Content="Alertes" Click="Alertes_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Height="50" Width="140" Margin="-7,10,0,10" Background="#2E333A" BorderBrush="#2E333A" Foreground="White"/>
-            <Button Content="Historiques Actions" Click="Historique_Click" HorizontalAlignment="Left" VerticalAlignment="Top" Height="50" Width="140" Background="#2E333A" BorderBrush="#2E333A" Foreground="White" Margin="-7,0,0,0"/>
+
+            <MenuItem  Header="Stocks" Click="Stocks_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Height="80" Width="140" Margin="0,10,0,10" BorderBrush="{x:Null}" Foreground="#FFFFFF">
+                <MenuItem.Template>
+                    <ControlTemplate TargetType="{x:Type MenuItem}">
+                        <Border x:Name="Border" Background="{TemplateBinding Background}">
+                            <ContentPresenter Content="{TemplateBinding Header}"
+                        ContentTemplate="{TemplateBinding HeaderTemplate}"
+                        Margin="{TemplateBinding Padding}"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        RecognizesAccessKey="True" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsHighlighted" Value="True">
+                                <Setter TargetName="Border" Property="Background" Value="#FF282D33" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </MenuItem.Template>
+            </MenuItem>
+
+            <MenuItem  Header="Alertes" Click="Alertes_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Height="80" Width="140" Margin="0,10,0,10" BorderBrush="{x:Null}" Foreground="#FFFFFF">
+                <MenuItem.Template>
+                    <ControlTemplate TargetType="{x:Type MenuItem}">
+                        <Border x:Name="Border" Background="{TemplateBinding Background}">
+                            <ContentPresenter Content="{TemplateBinding Header}"
+                        ContentTemplate="{TemplateBinding HeaderTemplate}"
+                        Margin="{TemplateBinding Padding}"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        RecognizesAccessKey="True" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsHighlighted" Value="True">
+                                <Setter TargetName="Border" Property="Background" Value="#FF282D33" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </MenuItem.Template>
+            </MenuItem>
+
+            <MenuItem  Header="Historique" Click="Historique_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Height="80" Width="140" Margin="0,10,0,10" BorderBrush="{x:Null}" Foreground="#FFFFFF">
+                <MenuItem.Template>
+                    <ControlTemplate TargetType="{x:Type MenuItem}">
+                        <Border x:Name="Border" Background="{TemplateBinding Background}">
+                            <ContentPresenter Content="{TemplateBinding Header}"
+                        ContentTemplate="{TemplateBinding HeaderTemplate}"
+                        Margin="{TemplateBinding Padding}"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        RecognizesAccessKey="True" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsHighlighted" Value="True">
+                                <Setter TargetName="Border" Property="Background" Value="#FF282D33" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </MenuItem.Template>
+            </MenuItem>
         </Menu>
         <Frame x:Name="Main" Margin="140,0,0,0" NavigationUIVisibility="Hidden" />
     </Grid>
