--- a/app/Rance Connect/App.xaml
+++ b/app/Rance Connect/App.xaml
@@ -4,6 +4,42 @@
              xmlns:local="clr-namespace:Rance_Connect"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+        <Style TargetType="DataGrid">
+            <Setter Property="GridLinesVisibility" Value="None" />
+            <Setter Property="BorderBrush" Value="#FF575D64" />
+            <!-- Background color -->
+            <Setter Property="Background" Value="#FFFFFF" />
+            <!-- Border color -->
+            <Setter Property="BorderThickness" Value="0" />
+            <Setter Property="Padding" Value="0" />
+            <Setter Property="Margin" Value="0" />
+            <Setter Property="CanUserSortColumns" Value="False" />
+            <Setter Property="CellStyle">
+                <Setter.Value>
+                    <Style TargetType="DataGridCell">
+                        <Setter Property="BorderThickness" Value="0" />
+                        <Setter Property="TextBlock.TextDecorations" Value="None" />
+                    </Style>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="RowStyle">
+                <Setter.Value>
+                    <Style TargetType="DataGridRow">
+                        <Setter Property="BorderThickness" Value="0" />
+                        <Setter Property="TextBlock.TextDecorations" Value="None" />
+                    </Style>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="ColumnHeaderStyle">
+                <Setter.Value>
+                    <Style TargetType="DataGridColumnHeader">
+                        <Setter Property="BorderThickness" Value="0" />
+                        <Setter Property="TextBlock.TextDecorations" Value="None" />
+                    </Style>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
         <Style x:Key="textBoxSearch" TargetType="TextBox">
             <Setter Property="BorderThickness" Value="0"/>
             <Setter Property="Background" Value="#FF575D64"/>
