--- a/app/Rance Connect/Stock.xaml
+++ b/app/Rance Connect/Stock.xaml
@@ -9,6 +9,8 @@
       Title="Stock">
     <Page.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVis"/>
+        <BooleanToVisibilityConverter x:Key="BoolToVis1"/>
+        <BooleanToVisibilityConverter x:Key="BoolToVis2"/>
     </Page.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -25,21 +27,53 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
         </Grid>
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="1" Panel.ZIndex="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Grid Margin="10,0,0,10">
+            <Grid Margin="10,0,0,10" VerticalAlignment="Center">
                 <TextBlock Visibility="{Binding ElementName=SearchBar,Path=Text.IsEmpty,Converter={StaticResource BoolToVis}}" Panel.ZIndex="1" IsHitTestVisible="False" Foreground="#FFFFFF" HorizontalAlignment="Center" Text="Rechercher un produit ..." Width="170" VerticalAlignment="Center"/>
-                <TextBox x:Name="SearchBar" Style="{StaticResource textBoxSearch}"/>
+                <TextBox x:Name="SearchBar" Style="{StaticResource textBoxSearch}" TextChanged="FilterUpdate"/>
+            </Grid>
+            <Grid  Margin="10,10,0,0" Grid.Column="1" VerticalAlignment="Top">
+                <StackPanel x:Name="Categories" Height="25" Background="#FF43484E" MinHeight="25" MaxHeight="25" VerticalAlignment="Top" Margin="0,0,0,-25">
+                    <StackPanel Height="25">
+                        <Button Content="Filtrer par catégorie" Tag="" Click="DropMenu_Click" Height="25" Background="{x:Null}" Foreground="White"/>
+                    </StackPanel>
+                </StackPanel>
+            </Grid>
+            <Grid Margin="10,0,80,10" Grid.Column="2" VerticalAlignment="Center" Width="75">
+                <TextBlock Visibility="{Binding ElementName=MinPrice,Path=Text.IsEmpty,Converter={StaticResource BoolToVis1}}" Panel.ZIndex="1" IsHitTestVisible="False" Foreground="#FFFFFF" HorizontalAlignment="Center" Text="Prix Min" Width="60" VerticalAlignment="Center"/>
+                <TextBox x:Name="MinPrice" Style="{StaticResource textBoxSearch}" TextChanged="FilterUpdate"/>
+            </Grid>
+            <Grid  Margin="115,0,0,10" Grid.Column="2" VerticalAlignment="Center" Width="75">
+                <TextBlock Visibility="{Binding ElementName=MaxPrice,Path=Text.IsEmpty,Converter={StaticResource BoolToVis2}}" Panel.ZIndex="1" IsHitTestVisible="False" Foreground="#FFFFFF" HorizontalAlignment="Center" Text="Prix Max" Width="60" VerticalAlignment="Center"/>
+                <TextBox x:Name="MaxPrice" Style="{StaticResource textBoxSearch}" TextChanged="FilterUpdate"/>
+            </Grid>
+            <Grid  Margin="10,10,0,0" Grid.Column="3" VerticalAlignment="Top">
+                <StackPanel x:Name="AddProduct" Height="25" Background="#FF2774D0" MinHeight="25" MaxHeight="25" VerticalAlignment="Top" Margin="0,0,0,-25">
+                    <StackPanel Height="25">
+                        <Button Content="Ajouter un Produit" Tag="" Click="AddProduct_Click" Height="25" Background="{x:Null}" Foreground="White"/>
+                    </StackPanel>
+                </StackPanel>
             </Grid>
         </Grid>
+        
         <DataGrid Grid.Row="2" Margin="10,0,10,30" x:Name="Stocks" Background="#FF43484E" AutoGenerateColumns="False">
             <DataGrid.Columns>
-                <DataGridTemplateColumn Header="Name" IsReadOnly="True" CanUserResize="False" Width="*">
+                <DataGridTemplateColumn Header="EAN" IsReadOnly="True" CanUserResize="False" Width="110">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding EAN}"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTemplateColumn Header="Name" IsReadOnly="True" CanUserResize="False" Width="250">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
@@ -48,10 +82,38 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTemplateColumn IsReadOnly="True" Width="80">
+                <DataGridTemplateColumn Header="Categories" IsReadOnly="True" CanUserResize="False" Width="*">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <DataGrid ItemsSource="{Binding Categories}" AutoGenerateColumns="False" CanUserResizeColumns="False"
+                                GridLinesVisibility="None" BorderBrush="Transparent" CanUserSortColumns="False" 
+                                Background="Transparent" BorderThickness="0" Padding="0" Margin="0">
+                                <DataGrid.CellStyle>
+                                    <Style TargetType="DataGridCell">
+                                        <Setter Property="BorderThickness" Value="0" />
+                                        <Setter Property="TextBlock.TextDecorations" Value="None" />
+                                    </Style>
+                                </DataGrid.CellStyle>
+                                <DataGrid.Columns>
+                                    <DataGridTextColumn IsReadOnly="True"  Width="*" Binding="{Binding Name}" />
+                                </DataGrid.Columns>
+                            </DataGrid>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTemplateColumn Header="Prix" IsReadOnly="True" CanUserResize="False" Width="70">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding Price}"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTemplateColumn IsReadOnly="True" Width="80">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal" Margin="10, 10, 10, 10">
                                 <Button x:Name="goto" Tag="{Binding EAN}" Content="S'y rendre" Click="GoTo_Click"></Button>
                             </StackPanel>
                         </DataTemplate>
